# memento

./: .gitignore  flake.nix  memento.cabal  stack.yaml
.github/workflows/: default.yml
nix/: hix.nix  lib.nix  module.nix
src/: Main.hs  Orphans.hs  Utils.hs
src/Aws/: Types.hs
src/Control/Lens/: Local.hs
src/Data/: Iso.hs  These.hs  Tree.hs  TreeJson.hs  TreePath.hs
src/Data/Aeson/: Local.hs
src/Data/Map/: Extra.hs
src/Data/Text/: Show.hs
src/Effectful/: Amazonka.hs  Break.hs  Resource.hs  Retry.hs  Transaction.hs
src/Effectful/Error/Dynamic/: Extra.hs
src/Lens/Micro/: Local.hs
src/Memento/: Cli.hs  System.hs
src/Memento/Types/: Built.hs  Common.hs  Config.hs  Dynamic.hs  History.hs  Lock.hs  Static.hs
src/Text/: Table.hs
